import org.gradle.api.tasks.testing.logging.TestLogEvent

plugins {
    id 'org.sonarqube' version '7.0.1.6134'
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'maven-publish'
    apply plugin: 'signing'
    apply plugin: 'jacoco'
    apply plugin: 'org.sonarqube'

    repositories {
        mavenCentral()
    }

    java {
        sourceCompatibility JavaVersion.VERSION_21
        targetCompatibility JavaVersion.VERSION_21
        withSourcesJar()
        withJavadocJar()
        javadoc.options.addStringOption('Xdoclint:none', '-quiet')
    }

    test {
        useJUnitPlatform()
        jvmArgs("-XX:+EnableDynamicAgentLoading")
    }

    tasks.withType(Test).configureEach {
        testLogging {
            events TestLogEvent.SKIPPED, TestLogEvent.FAILED, TestLogEvent.STANDARD_OUT, TestLogEvent.STANDARD_ERROR
            exceptionFormat 'full'
        }
        afterSuite { desc, result ->
            if (!desc.parent) {
                println("${result.resultType} (${result.testCount} tests, ${result.successfulTestCount} successes, ${result.failedTestCount} failures, ${result.skippedTestCount} skipped)")
            }
        }
    }
}